sigscan : udpated addresses to 1.03's sigscan : made sigs bigger misc : moved all sigscans to header files

--- a/MMFreeCamera.vcxproj
+++ b/MMFreeCamera.vcxproj
@@ -63,6 +63,7 @@
     <Library Include="Dependencies\detours\lib\syelog.lib" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="config.toml" />
     <None Include="Dependencies\detours\lib\detours.pdb" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
