--- a/MMFreeCamera.vcxproj.filters
+++ b/MMFreeCamera.vcxproj.filters
@@ -108,5 +108,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Dependencies\detours\lib\detours.pdb" />
+    <None Include="config.toml" />
   </ItemGroup>
 </Project>
